test/tests/stages/16_characters_and_strings/valid/extra_credit/bitwise_ops_chars.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[6]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: uc
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 135
                      None: 
                    None: 
                  UChar: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: c
                  CSingleInit: 
                    CUnary: 
                      CNegate: 
                      CConstant: 
                        CConstInt: 
                          TInt: 116
                        None: 
                      None: 
                    None: 
                  Char: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CBinary: 
                    CBitAnd: 
                    CVar: 
                      TIdentifier: uc
                      None: 
                    CVar: 
                      TIdentifier: c
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 132
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CBinary: 
                    CBitOr: 
                    CVar: 
                      TIdentifier: uc
                      None: 
                    CVar: 
                      TIdentifier: c
                      None: 
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstInt: 
                        TInt: 113
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CBinary: 
                    CBitOr: 
                    CBinary: 
                      CBitXor: 
                      CVar: 
                        TIdentifier: c
                        None: 
                      CConstant: 
                        CConstUInt: 
                          TUInt: 1001
                        None: 
                      None: 
                    CConstant: 
                      CConstLong: 
                        TLong: 360
                      None: 
                    None: 
                  CConstant: 
                    CConstLong: 
                      TLong: 4294966637
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
