test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_wrong_type.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ints
                  CSingleInit: 
                    CString: 
                      CStringLiteral: 
                        List[3]: 
                          TChar: 97
                          TChar: 98
                          TChar: 99
                      None: 
                    None: 
                  Array: 
                    TLong: 4
                    Long: 
                  None: 
            CS: 
              CReturn: 
                CSubscript: 
                  CVar: 
                    TIdentifier: ints
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
